[workspace]
members = [
    "canonical-path",
    "gaunt",
    "hkd32",
    "secrecy",
    "subtle-encoding",
    "tai64",
    "zeroize",
    "zeroize_derive"
]

# Enable integer overflow checks in release builds
# WARNING: DO NOT REMOVE THIS! We rely on this for panic-on-overflow semantics
# in the event of integer arithmetic bugs.
[profile.release]
overflow-checks = true
