[workspace]
members = [
    "anomaly",
    "canonical-path",
    "datadog",
    "harp",
    "hkd32",
    "secrecy",
    "stdtx",
    "subtle-encoding",
    "tai64",
    "zeroize",
    "zeroize/derive"
]

# Enable integer overflow checks in release builds
# WARNING: DO NOT REMOVE THIS! We rely on this for panic-on-overflow semantics
# in the event of integer arithmetic bugs.
[profile.release]
overflow-checks = true
