[package]
name = "bip32"
description = """
BIP32 hierarchical key derivation implemented in a generic, no_std-friendly
manner. Supports deriving keys using the pure Rust k256 crate or the
C library-backed secp256k1 crate
"""
version    = "0.2.0" # Also update html_root_url in lib.rs when bumping this
authors    = ["Tony Arcieri <tony@iqlusion.io>"]
license    = "Apache-2.0 OR MIT"
homepage   = "https://github.com/iqlusioninc/crates/"
repository = "https://github.com/iqlusioninc/crates/tree/main/bip32"
categories = ["cryptography", "no-std"]
keywords   = ["crypto", "bip32", "bip39", "derivation", "mnemonic"]
edition    = "2018"
readme     = "README.md"

[dependencies]
bs58 = { version = "0.4", default-features = false, features = ["check"] }
hkd32 = { version = "0.6", default-features = false, path = "../hkd32" }
hmac = { version = "0.11", default-features = false }
ripemd160 = { version = "0.9", default-features = false }
sha2 = { version = "0.9", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false, path = "../zeroize" }

# optional dependencies
secp256k1-ffi = { package = "secp256k1", version = "0.20", optional = true }

[dependencies.k256]
version = "0.9.4"
optional = true
default-features = false
features = ["arithmetic", "ecdsa", "sha256", "keccak256", "zeroize"]

[dev-dependencies]
hex-literal = "0.3"
rand_core = { version = "0.6", features = ["std"] }

[features]
default = ["bip39", "secp256k1", "std"]
alloc = ["zeroize/alloc"]
bip39 = ["hkd32/bip39", "std"]
secp256k1 = ["k256"]
std = ["alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
