[package]
name = "bip32"
version = "0.5.2"
description = """
BIP32 hierarchical key derivation implemented in a generic, no_std-friendly
manner. Supports deriving keys using the pure Rust k256 crate or the
C library-backed secp256k1 crate
"""
authors = ["Tony Arcieri <tony@iqlusion.io>"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/iqlusioninc/crates/"
repository = "https://github.com/iqlusioninc/crates/tree/main/bip32"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "bip32", "bip39", "derivation", "mnemonic"]
readme = "README.md"
edition  = "2021"
rust-version = "1.65"

[dependencies]
bs58 = { version = "0.5", default-features = false, features = ["check"] }
hmac = { version = "0.13.0-pre.4", default-features = false }
rand_core = { version = "0.6", default-features = false }
ripemd = { version = "0.2.0-pre", default-features = false }
sha2 = { version = "0.11.0-pre.4", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false }

# optional dependencies
k256 = {version = "0.14.0-pre.2", optional = true, default-features = false, features = ["ecdsa", "sha256"]}
signature = { version = "2.3.0-pre.4", default-features = false, features = ["alloc"] }
once_cell = { version = "1", optional = true }
pbkdf2 = { version = "0.13.0-pre.1", optional = true, default-features = false, features = ["hmac"] }
secp256k1-ffi = { package = "secp256k1", version = "0.29", optional = true }

[dev-dependencies]
hex-literal = "0.4"
rand_core = { version = "0.6", features = ["std"] }

[features]
default = ["bip39", "secp256k1", "std"]
alloc = ["zeroize/alloc"]
bip39 = ["mnemonic", "pbkdf2", "std"]
mnemonic = ["alloc", "once_cell"]
secp256k1 = ["k256"]
std = ["alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
