[package]
name        = "canonical-path"
description = "Path and PathBuf-like types for representing canonical filesystem paths"
version     = "1.0.0" # Also update html_root_url in lib.rs when bumping this
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
license     = "Apache-2.0"
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/master/canonical-path"
readme      = "README.md"
categories  = ["filesystem"]
keywords    = ["filesystem", "path", "canonicalization"]

[badges]
travis-ci = { repository = "iqlusioninc/crates" }

[dev-dependencies]
tempdir = "0.3"
