[package]
name        = "cargo-rpm"
description = "Build RPMs from Rust projects using Cargo"
version     = "0.1.1"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
license     = "Apache-2.0"
homepage    = "https://github.com/iqlusion-io/crates/"
repository  = "https://github.com/iqlusion-io/crates/tree/master/cargo-rpm"
readme      = "README.md"
categories  = ["command-line-utilities", "development-tools"]
keywords    = ["rpm", "cargo", "package", "release"]

[dependencies]
failure = "0.1"
flate2 = { version = "1.0", default-features = false, features = ["zlib"] }
gumdrop = "0.4"
gumdrop_derive = "0.4"
handlebars = "1.0.0-beta.1"
iq-cli = { version = "0", path = "../iq-cli" }
serde = "1"
serde_derive = "1"
tar = "0.4"
toml = "0.4"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
cargo-rpm = { path = "/usr/bin/cargo-rpm" }
