[package]
name = "datadog"
version = "0.1.0"
authors = ["Shella Stephens <shella@iqlusion.io>"]
homepage = "https://github.com/iqlusioninc/crates/"
categories  = ["api-bindings"]
edition     = "2021"
rust-version = "1.56"

[dependencies]
hostname = "0.3"
hyper = { version = "0.14.15", features = ["full"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
