[package]
name        = "gaunt"
description = "High-level, self-contained, minimalist HTTP toolkit"
version     = "0.0.1"
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/master/gaunt"
readme      = "README.md"
categories  = ["network-programming"]
keywords    = ["api", "client", "http", "rest", "server"]

[badges]
circle-ci = { repository = "iqlusioninc/crates" }

[dependencies]
failure = "0.1"
failure_derive = "0.1"
slog = { version = "2", optional = true }
