[package]
name        = "gaunt"
description = "Minimalist Rust HTTP toolkit (client-only)."
version     = "0.1.0"
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/develop/gaunt"
readme      = "README.md"
categories  = ["network-programming", "no-std", "web-programming::http-client"]
keywords    = ["api", "client", "http", "rest", "web"]

[badges]
travis-ci = { repository = "iqlusioninc/crates", branch = "develop" }

[dependencies]
failure = { version = "0.1", default-features = false }
failure_derive = "0.1"
slog = { version = "2", optional = true }

[features]
alloc = []
default = ["std"]
logger = ["slog", "std"]
std = ["alloc", "failure/std"]
