[package]
name = "gumdrop_derive"
version = "0.4.1"
authors = ["Murarth <murarth@gmail.com>"]

description = "custom derive support for gumdrop"

documentation = "https://docs.rs/gumdrop_derive/"
homepage = "https://github.com/murarth/gumdrop_derive"
repository = "https://github.com/murarth/gumdrop_derive"

keywords = ["args", "command-line", "flag", "getopts", "option"]
license = "MIT/Apache-2.0"

[lib]
name = "gumdrop_derive"
proc-macro = true

[dependencies]
proc-macro2 = "0.4.4"
quote = "0.6"
syn = "0.14"
