[package]
name        = "harp"
description = "Minimalist Rust HTTP toolkit (client-only)."
version     = "0.1.0"
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/main/harp"
readme      = "README.md"
categories  = ["network-programming", "no-std", "web-programming::http-client"]
keywords    = ["api", "client", "http", "rest", "web"]
edition     = "2021"
rust-version = "1.56"

[dependencies]
slog = { version = "2", optional = true }

[features]
alloc = []
default = ["std"]
logger = ["slog", "std"]
std = ["alloc"]
