[package]
name        = "hkd32"
description = """
HMAC-based Hierarchical Key Derivation: deterministically derive
a hierarchy of symmetric keys from initial keying material through
repeated applications of the Hash-based Message Authentication Code
(HMAC) construction. Optionally supports storing root derivation
passwords as a 24-word mnemonic phrase (i.e. BIP39).
"""
version    = "0.5.0" # Also update html_root_url in lib.rs when bumping this
authors    = ["Tony Arcieri <tony@iqlusion.io>"]
license    = "Apache-2.0 OR MIT"
homepage   = "https://github.com/iqlusioninc/crates/"
repository = "https://github.com/iqlusioninc/crates/tree/main/hkd32"
edition    = "2018"
readme     = "README.md"
categories = ["cryptography", "no-std"]
keywords   = ["crypto", "bip32", "bip39", "derivation", "mnemonic"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
hmac = { version = "0.11", default-features = false }
rand_core = { version = "0.5", default-features = false }
sha2 = { version = "0.9", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"], path = "../zeroize" }

# optional dependencies
once_cell = { version = "1", optional = true }
pbkdf2 = { version = "0.8", optional = true, default-features = false }
subtle-encoding = { version = "0.5", optional = true, default-features = false, path = "../subtle-encoding" }

[dev-dependencies]
hex-literal = "0.3"
rand_core = { version = "0.5", features = ["std"] }

[features]
default = ["alloc", "bech32"]
alloc = ["zeroize/alloc"]
bech32 = ["alloc", "subtle-encoding/bech32-preview"]
bip39 = ["mnemonic", "pbkdf2"]
mnemonic = ["alloc", "once_cell"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
