[package]
name        = "iq-cli"
description = "Cargo-like colored command-line interfaces"
version     = "0.1.0" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/master/iq-cli"
readme      = "README.md"
categories  = ["command-line-interface"]
keywords    = ["cli", "color"]

[badges]
circle-ci = { repository = "iqlusioninc/crates" }

[dependencies]
lazy_static = "1"
libc = "0.2"
term = "0.5"
