[package]
name        = "iq-cli"
description = "Command-line app microframework with support for Cargo-like status messages"
version     = "0.1.0" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/master/iq-cli"
readme      = "README.md"
categories  = ["command-line-interface"]
keywords    = ["cli", "color"]

[badges]
circle-ci = { repository = "iqlusioninc/crates" }
appveyor  = { repository = "iqlusioninc/crates" }

[dependencies]
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1"
term = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "fileapi", "minwinbase", "minwindef", "processenv", "winbase", "winnt"] }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"