[package]
name        = "iq-cli"
description = "Command-line app microframework with support for Cargo-like status messages"
version     = "0.1.0" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>", "Murarth <murarth@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/master/iq-cli"
readme      = "README.md"
categories  = ["command-line-interface"]
keywords    = ["args", "command-line", "cli", "color", "option"]

[badges]
circle-ci = { repository = "iqlusioninc/crates" }
appveyor  = { repository = "iqlusioninc/crates" }

[dependencies]
failure = { version = "0.1", default-features = false, features = ["std"] }
iq-cli-derive = { version = "0", path = "../iq-cli-derive" }
lazy_static = "1"
log = { version = "0.4", optional = true }
serde = { version = "1", optional = true }
simplelog = { version = "0.5", optional = true }
term = "0.5"
toml = { version = "0.4", optional = true }

[dev-dependencies]
assert_matches = "1"

[features]
config = ["serde", "status", "toml"]
default = ["errors", "logging", "options", "status"]
errors = []
logging = ["log", "simplelog"]
options = ["iq-cli-derive/options"]
status = []

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "fileapi", "minwinbase", "minwindef", "processenv", "winbase", "winnt"] }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"
