[package]
name        = "keyuri"
description = "A URI-based format for encoding cryptographic keys"
version     = "0.0.0" # Also update html_root_url in lib.rs when bumping this
authors     = ["Tony Arcieri <bascule@gmail.com>"]
license     = "Apache-2.0"
homepage    = "https://github.com/iqlusion-io/crates/"
repository  = "https://github.com/iqlusion-io/crates/tree/master/keyuri"
readme      = "README.md"
categories  = ["cryptography", "encoding"]
keywords    = ["cryptography", "security"]

[badges]
circle-ci = { repository = "iqlusion-io/crates" }

[dependencies]
failure = "0.1"