[package]
name        = "keyuri"
description = "A URI-based format for encoding cryptographic keys (with bech32 binary encoding/checksums)"
version     = "0.0.0" # Also update html_root_url in lib.rs when bumping this
authors     = ["Tony Arcieri <bascule@gmail.com>"]
license     = "Apache-2.0"
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/master/keyuri"
readme      = "README.md"
categories  = ["cryptography", "encoding"]
keywords    = ["bech32", "cryptography", "security", "uri"]

[badges]
circle-ci = { repository = "iqlusioninc/crates" }

[dependencies]
clear_on_drop = "0.2"
failure = "0.1"
iq-bech32 = { version = "0", path = "../iq-bech32" }

[features]
nightly = ["clear_on_drop/nightly"]
