[package]
name = "mintscan"
version = "0.1.0" # Also update html_root_url in lib.rs when bumping this
description = """
API client for the Mintscan Cosmos explorer by Cosmostation
"""
authors = ["Tony Arcieri <tony@iqlusion.io>", ]
homepage   = "https://github.com/iqlusioninc/crates/"
repository = "https://github.com/iqlusioninc/crates/tree/main/mintscan"
license    = "Apache-2.0 OR MIT"
categories = ["api-bindings", "cryptography::cryptocurrencies"]
keywords   = ["api", "client", "cosmos", "explorer", "tendermint"]
readme     = "README.md"
edition    = "2018"

[dependencies]
iqhttp = { version = "0.1", features = ["json"], path = "../iqhttp" }
serde = { version = "1", features = ["serde_derive"] }
tendermint = { version = "0.21", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
