[package]
name        = "rpmlib-sys"
description = "RedHat Package Manager (RPM) library low-level FFI bindings"
version     = "0.1.0"
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
categories  = ["external-ffi-bindings", "os"]
keywords    = ["rpm", "linux", "redhat", "fedora", "centos"]
readme      = "README.md"
homepage    = "https://docs.rs/crate/rpmlib/"
repository  = "https://github.com/iqlusion-io/crates/tree/master/rpmlib-sys"

[badges]
circle-ci = { repository = "iqlusion-io/crates" }

[build-dependencies]
bindgen = "0.35"
