[package]
name        = "rpmlib-sys"
description = "RPM Package Manager library FFI bindings (librpm, librpmbuild, librpmsign)"
version     = "0.4.0"
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
categories  = ["external-ffi-bindings", "os"]
keywords    = ["rpm", "linux", "redhat", "fedora", "centos"]
readme      = "README.md"
homepage    = "https://rpmlib.rs/rpmlib-sys/"
repository  = "https://github.com/iqlusion-io/crates/tree/master/rpmlib-sys"

[badges]
circle-ci = { repository = "iqlusion-io/crates" }

[build-dependencies]
bindgen = "0.35"

[features]
default = []
rpmbuild = []
rpmsign = []
