[package]
name        = "rpmlib"
description = "RedHat Package Manager (RPM) library binding with an idiomatic Rust API"
version     = "0.0.1" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
categories  = ["api-bindings", "os", "parsing"]
keywords    = ["rpm", "linux", "redhat", "fedora", "centos"]
readme      = "README.md"
homepage    = "https://docs.rs/crate/rpmlib/"
repository  = "https://github.com/iqlusion-io/crates/tree/master/rpmlib"

[badges]
circle-ci = { repository = "iqlusion-io/crates" }

[dependencies]
byteorder = { version = "1", default-features = false }
failure = "0.1"
lazy_static = "1"
libc = { version = "0.2", default-features = false }
rpmlib-sys = { version = "0.4", path = "../rpmlib-sys" }
streaming-iterator = "0.1"
