[package]
name        = "secrecy"
description = """
Wrapper types and traits for secret management which help ensure
they aren't accidentally copied, logged, or otherwise exposed
(as much as possible), and also ensure secrets are securely wiped
from memory when dropped.
"""
version     = "0.8.0" # Also update html_root_url in lib.rs when bumping this
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
license     = "Apache-2.0 OR MIT"
homepage    = "https://github.com/iqlusioninc/crates/"
repository  = "https://github.com/iqlusioninc/crates/tree/main/secrecy"
readme      = "README.md"
categories  = ["cryptography", "memory-management", "no-std", "os"]
keywords    = ["clear", "memory", "secret", "secure", "wipe"]
edition     = "2021"
rust-version = "1.56"

[dependencies]
zeroize = { version = "1.5", default-features = false }

# optional dependencies
bytes = { version = "1", optional = true }
serde = { version = "1", optional = true }

[features]
default = ["alloc"]
alloc = ["zeroize/alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
