[package]
name         = "signatory"
description  = "Multi-provider elliptic curve digital signature library with ECDSA and Ed25519 support"
version      = "0.26.0"
license      = "Apache-2.0 OR MIT"
authors      = ["Tony Arcieri <tony@iqlusion.io>"]
homepage     = "https://github.com/iqlusioninc/crates"
repository   = "https://github.com/iqlusioninc/crates/tree/main/signatory"
readme       = "README.md"
categories   = ["authentication", "cryptography"]
keywords     = ["cryptography", "ecdsa", "ed25519", "signing", "signatures"]
edition      = "2021"
rust-version = "1.65"

[dependencies]
pkcs8 = { version = "0.10", features = ["alloc", "pem"] }
rand_core = "0.6"
signature = "2"
zeroize = "1.4"

# optional dependencies
ecdsa = { version = "0.16", optional = true, features = ["pem", "pkcs8"] }
ed25519-dalek = { version = "2.0.0-rc.2", optional = true, default-features = false }
k256 = { version = "0.13", optional = true, features = ["ecdsa", "sha256"] }
p256 = { version = "0.13", optional = true, features = ["ecdsa", "sha256"] }
p384 = { version = "0.13", optional = true, features = ["ecdsa", "sha384"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["std"]
ed25519 = ["ed25519-dalek"]
nistp256 = ["ecdsa", "p256"]
nistp384 = ["ecdsa", "p384"]
secp256k1 = ["ecdsa", "k256"]
std = ["pkcs8/std", "rand_core/std", "signature/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
